--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,24 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div class="deco">
-    </div>
-
     <main>
         <header class="theme-color-default story">
             <div class="inner">
                 <h1><span class="emphasis">Когнитивные <br />искажения<br /></span>в программировании</h1>
-                <p>
-                    Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
-                </p>
-                <p>
-                    Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию. Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
-                </p>
-                <button>подробнее</button>
+                <div class="container">
+                    <div class="box">
+                        <p>
+                            Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p>
+                            Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
+                        <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+                        <a  href="#" class="more">ПОДРОБНЕЕ</a>
+                    </div>
+                </div>  
+                <img src="assets/img/main.png" alt="Tota">   
             </div>
         </header>
 
