Changed index.html, style.css Changes in video-section

--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,10 @@
         </header>
 
         <section class="theme-color-white video">
-            <div class="inner video">
+            <div class="inner">
                 <h2>Что же это такое, <br /><span class="emphasis">когнитивные искажения?</span></h2>
                 <p>Что такое когнитивные искажения. Petrovna Channel</p>
-                <img src="assets/img/video.jpg" alt="Video" />
+                <iframe width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
 
