--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
 
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <main>
         <header class="theme-color-default story">
@@ -16,17 +18,22 @@
                 <div class="container">
                     <div class="box">
                         <p>
-                            Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+                            Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей
+                            продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем
+                            малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к
+                            сожалению, нет.
                         </p>
                     </div>
                     <div class="box">
                         <p>
-                            Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
-                        <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
-                        <a  href="#" class="more">ПОДРОБНЕЕ</a>
+                            Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере
+                            продуктивности, багам и бесконечному разочарованию.</p>
+                        <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем
+                            сломать и цикл, а остатки нейтрализовать.</p>
+                        <a href="#" class="more">ПОДРОБНЕЕ</a>
                     </div>
-                </div>  
-                <img src="assets/img/main.png" alt="Tota">   
+                </div>
+                <img src="assets/img/main.png" alt="Tota">
             </div>
         </header>
 
@@ -34,44 +41,53 @@
             <div class="inner">
                 <h2>Что же это такое, <br /><span class="emphasis">когнитивные искажения?</span></h2>
                 <p>Что такое когнитивные искажения. Petrovna Channel</p>
-                <iframe width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0" allowfullscreen></iframe>
+                <iframe width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0"
+                    allowfullscreen></iframe>
             </div>
         </section>
 
-        <section class="theme-color-dark">
+        <nav class="theme-color-dark" id="navigation">
             <div class="inner">
-                <div class="box">
+                <div>
                     <h2><span class="emphasis">5 когнитивных искажений, </span><br />о существовании которых стоит помнить</h2>
                 </div>
-                <div class="box">
+
+                <a href="#thema1" class="nav-box">
                     <span class="number">1</span>
                     <h3>Эффект ИКЕА</h3>
                     <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
-                </div>
-                <div class="box">
+                </a>
+
+                <a href="#thema2" class="nav-box">
                     <span class="number">2</span>
                     <h3>Преждевременная оптимизация</h3>
                     <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
-                </div>
-                <div class="box">
+                </a>
+
+                <a href="#thema3" class="nav-box">
                     <span class="number">3</span>
                     <h3>Искажение новизны</h3>
-                    <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
-                </div>
-                <div class="box">
+                    <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более
+                        старые.</p>
+                </a>
+
+                <a href="#thema4" class="nav-box">
                     <span class="number">4</span>
                     <h3>Гиперболическое обесценивание</h3>
-                    <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
-                </div>
-                <div class="box">
+                    <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
+                        доступную в будущем.</p>
+                </a>
+
+                <a href="#thema5" class="nav-box">
                     <span class="number">5</span>
                     <h3>Ошибка планирования</h3>
                     <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
-                </div>
-            </div>
-        </section>
+                </a>
 
-        <section class="theme-color-default">
+            </div>
+        </nav>
+
+        <section class="theme-color-default" id="thema1">
             <div class="inner">
                 <img src="assets/img/ikea-effect.jpg" alt="Эффект ИКЕА" />
                 <p class="lead">Когнитивные искажения</p>
@@ -79,17 +95,20 @@
                 <p class="intro">
                     Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
                 </p>
-                <h3 class="content">Как проявляется</h3>
+                <h3 class="text-block">Как проявляется</h3>
                 <p>
-                    Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.
+                    Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать
+                    товары, которые они могут собрать сами, а не уже собранные кем-то.
                 </p>
                 <p>
-                    Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.
+                    Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то
+                    работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового
+                    решения, вы понимаете, о чём я говорю.
                 </p>
             </div>
         </section>
 
-        <section class="theme-color-invert">
+        <section class="theme-color-invert" id="thema2">
             <div class="inner">
                 <p class="lead">Когнитивные искажения</p>
                 <h2>Преждевременная оптимизация</h2>
@@ -97,53 +116,63 @@
                     Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
                 </p>
                 <img src="assets/img/premature-optimization.jpg" alt="Преждевременная оптимизация" />
-                <h3 class="content">Как проявляется</h3>
+                <h3 class="text-block">Как проявляется</h3>
                 <p>
-                    Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.
+                    Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то
+                    автомобиль не станет быстрее.
                 </p>
                 <p>
-                    Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.
+                    Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь
+                    экспериментального проекта.
                 </p>
             </div>
         </section>
 
-        <section class="theme-color-default">
+        <section class="theme-color-default" id="thema3">
             <div class="inner">
                 <img src="assets/img/distortion-of-novelty.jpg" alt="Искажение новизны" />
                 <p class="lead">Когнитивные искажения</p>
                 <h2>Искажение новизны</h2>
                 <p class="intro">
-                    Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.
+                    Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более
+                    старые.
                 </p>
-                <h3 class="content">Как проявляется</h3>
+                <h3 class="text-block">Как проявляется</h3>
                 <p>
-                    Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!
+                    Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили
+                    подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!
                 </p>
                 <p>
-                    Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы смотрите на разные проблемы под одним и тем же углом.
+                    Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы
+                    смотрите на разные проблемы под одним и тем же углом.
                 </p>
             </div>
         </section>
 
-        <section class="theme-color-invert">
+        <section class="theme-color-invert" id="thema4">
             <div class="inner">
                 <p class="lead">Когнитивные искажения</p>
                 <h2>Гиперболическое обесценивание</h2>
                 <p class="intro">
-                    Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.
+                    Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
+                    доступную в будущем.
                 </p>
                 <img src="assets/img/hyperbolic-depreciation.jpg" alt="Гиперболическое обесценивание" />
-                <h3 class="content">Как проявляется</h3>
+                <h3 class="text-block">Как проявляется</h3>
                 <p>
-                    Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.
+                    Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim?
+                    Поздравляю, у вас наблюдается гиперболическое обесценивание.
                 </p>
                 <p>
-                    Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.
+                    Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую
+                    нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как
+                    только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните
+                    много времени.
                 </p>
             </div>
         </section>
 
-        <section class="theme-color-default">
+        <section class="theme-color-default" id="thema5">
             <div class="inner">
                 <img src="assets/img/planning-error.jpg" alt="Ошибка планирования" />
                 <p class="lead">Когнитивные искажения</p>
@@ -151,12 +180,14 @@
                 <p class="intro">
                     Неправильно рассчитывать время необходимое для завершения задачи.
                 </p>
-                <h3 class="content">Как проявляется</h3>
+                <h3 class="text-block">Как проявляется</h3>
                 <p>
-                    Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.
+                    Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами
+                    пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.
                 </p>
                 <p>
-                    Это отлично выражается в старом афоризме: <br />Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.
+                    Это отлично выражается в старом афоризме: <br />Первые 90% готового кода отнимают первые 90% времени
+                    разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.
                 </p>
             </div>
         </section>
@@ -164,7 +195,7 @@
 
     <footer>
         <div class="inner">
-            <div class="container">     
+            <div class="container">
                 <div class="box">
                     <h3>Хотите узнать больше? <br />Подпишитесь на обновления</h3>
                 </div>
@@ -178,13 +209,14 @@
                         <p>Подписываясь, вы принимаете <a href="#">правила сервиса</a></p>
                     </form>
                 </div>
-            </div>   
+            </div>
             <div class="page-info-additional">
                 <p>© 2020 Константин Константинопольский</p>
                 <p>По материалам статьи <a href="#">Yash Ranadive Cognitive Biases in Programming</a></p>
                 <p><a href="#">Курсы программирования Hexlet</a></p>
             </div>
-        </footer>
+    </footer>
     </div>
 </body>
+
 </html>
