Changes in index.html and style.css Section ikea-effect is ready

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                     <h2><span class="emphasis">5 когнитивных искажений, </span><br />о существовании которых стоит помнить</h2>
                 </div>
 
-                <a href="#thema1" class="nav-box">
+                <a href="#ikea-effect" class="nav-box">
                     <span class="number">1</span>
                     <h3>Эффект ИКЕА</h3>
                     <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
@@ -87,24 +87,36 @@
             </div>
         </nav>
 
-        <section class="theme-color-default" id="thema1">
+        <section class="theme-color-default" id="ikea-effect">
             <div class="inner">
-                <img src="assets/img/ikea-effect.jpg" alt="Эффект ИКЕА" />
-                <p class="lead">Когнитивные искажения</p>
-                <h2>Эффект ИКЕА</h2>
-                <p class="intro">
-                    Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
-                </p>
+                <div class="container">
+                    <div class="box">
+                        <img src="assets/img/ikea-effect.jpg" alt="Эффект ИКЕА" />
+                    </div>
+                    <div class="box">
+                        <p class="lead">Когнитивные искажения</p>
+                        <h2>Эффект ИКЕА</h2>
+                        <p class="intro">
+                            Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.
+                        </p>
+                    </div>
+                </div>
                 <h3 class="text-block">Как проявляется</h3>
-                <p>
-                    Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать
-                    товары, которые они могут собрать сами, а не уже собранные кем-то.
-                </p>
-                <p>
-                    Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то
-                    работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового
-                    решения, вы понимаете, о чём я говорю.
-                </p>
+                <div class="container">
+                    <div class="box">
+                        <p>
+                            Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать
+                            товары, которые они могут собрать сами, а не уже собранные кем-то.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p>
+                            Мы склонны переоцнивать наши собственные решения и недооценивать решения других. Если вы когда-то
+                            работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового
+                            решения, вы понимаете, о чём я говорю.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
