--- a/src/index.html
+++ b/src/index.html
@@ -58,27 +58,27 @@
                     <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
                 </a>
 
-                <a href="#thema2" class="nav-box">
+                <a href="#premature-optimization" class="nav-box">
                     <span class="number">2</span>
                     <h3>Преждевременная оптимизация</h3>
                     <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
                 </a>
 
-                <a href="#thema3" class="nav-box">
+                <a href="#distortion-of-novelty" class="nav-box">
                     <span class="number">3</span>
                     <h3>Искажение новизны</h3>
                     <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более
                         старые.</p>
                 </a>
 
-                <a href="#thema4" class="nav-box">
+                <a href="#hyperbolic-depreciation" class="nav-box">
                     <span class="number">4</span>
                     <h3>Гиперболическое обесценивание</h3>
                     <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
                         доступную в будущем.</p>
                 </a>
 
-                <a href="#thema5" class="nav-box">
+                <a href="#errors-in-planning" class="nav-box">
                     <span class="number">5</span>
                     <h3>Ошибка планирования</h3>
                     <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
@@ -120,87 +120,135 @@
             </div>
         </section>
 
-        <section class="theme-color-invert" id="thema2">
+        <section class="theme-color-invert" id="premature-optimization">
             <div class="inner">
-                <p class="lead">Когнитивные искажения</p>
-                <h2>Преждевременная оптимизация</h2>
-                <p class="intro">
-                    Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
-                </p>
-                <img src="assets/img/premature-optimization.jpg" alt="Преждевременная оптимизация" />
+                <div class="container">
+                    <div class="box">
+                        <p class="lead">Когнитивные искажения</p>
+                        <h2>Преждевременная оптимизация</h2>
+                        <p class="intro">
+                            Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <img src="assets/img/premature-optimization.jpg" alt="Преждевременная оптимизация" />
+                    </div>
+                </div>
                 <h3 class="text-block">Как проявляется</h3>
-                <p>
-                    Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то
-                    автомобиль не станет быстрее.
-                </p>
-                <p>
-                    Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь
-                    экспериментального проекта.
-                </p>
+                <div class="container">
+                    <div class="box">
+                        <p>
+                            Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то
+                            автомобиль не станет быстрее.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p>
+                            Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь
+                            экспериментального проекта.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <section class="theme-color-default" id="thema3">
+        <section class="theme-color-default" id="distortion-of-novelty">
             <div class="inner">
-                <img src="assets/img/distortion-of-novelty.jpg" alt="Искажение новизны" />
-                <p class="lead">Когнитивные искажения</p>
-                <h2>Искажение новизны</h2>
-                <p class="intro">
-                    Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более
-                    старые.
-                </p>
+                <div class="container">
+                    <div class="box">
+                        <img src="assets/img/distortion-of-novelty.jpg" alt="Искажение новизны" />
+                    </div>
+                    <div class="box">
+                        <p class="lead">Когнитивные искажения</p>
+                        <h2>Искажение новизны</h2>
+                        <p class="intro">
+                            Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более
+                            старые.
+                        </p>
+                    </div>
+                </div>
                 <h3 class="text-block">Как проявляется</h3>
-                <p>
-                    Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили
-                    подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!
-                </p>
-                <p>
-                    Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы
-                    смотрите на разные проблемы под одним и тем же углом.
-                </p>
+                <div class="container">
+                    <div class="box">
+                        <p>
+                            Часто это искажение настигает нас, когда нужно решение проблемы и… о! Мы как раз только что решили
+                            подобную проблему! Давайте использовать это же решение, потому что оно сработало, и мы помним как!
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p>
+                            Вы замечаете, что пользуетесь теми же рабочими методиками раз за разом? Если да, возможно, вы
+                            смотрите на разные проблемы под одним и тем же углом.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <section class="theme-color-invert" id="thema4">
+        <section class="theme-color-invert" id="hyperbolic-depreciation">
             <div class="inner">
-                <p class="lead">Когнитивные искажения</p>
-                <h2>Гиперболическое обесценивание</h2>
-                <p class="intro">
-                    Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
-                    доступную в будущем.
-                </p>
-                <img src="assets/img/hyperbolic-depreciation.jpg" alt="Гиперболическое обесценивание" />
+                <div class="container">
+                    <div class="box">
+                        <p class="lead">Когнитивные искажения</p>
+                        <h2>Гиперболическое обесценивание</h2>
+                        <p class="intro">
+                            Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
+                            доступную в будущем.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <img src="assets/img/hyperbolic-depreciation.jpg" alt="Гиперболическое обесценивание" />
+                    </div>
+                </div>
                 <h3 class="text-block">Как проявляется</h3>
-                <p>
-                    Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim?
-                    Поздравляю, у вас наблюдается гиперболическое обесценивание.
-                </p>
-                <p>
-                    Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую
-                    нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как
-                    только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните
-                    много времени.
-                </p>
+                <div class="container">
+                    <div class="box">
+                        <p>
+                            Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim?
+                            Поздравляю, у вас наблюдается гиперболическое обесценивание.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p>
+                            Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую
+                            нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как
+                            только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните
+                            много времени.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <section class="theme-color-default" id="thema5">
+        <section class="theme-color-default" id="errors-in-planning">
             <div class="inner">
-                <img src="assets/img/planning-error.jpg" alt="Ошибка планирования" />
-                <p class="lead">Когнитивные искажения</p>
-                <h2>Ошибка планирования</h2>
-                <p class="intro">
-                    Неправильно рассчитывать время необходимое для завершения задачи.
-                </p>
+                <div class="container">
+                    <div class="box">
+                        <img src="assets/img/planning-error.jpg" alt="Ошибка планирования" />
+                    </div>
+                    <div class="box">
+                        <p class="lead">Когнитивные искажения</p>
+                        <h2>Ошибка планирования</h2>
+                        <p class="intro">
+                            Неправильно рассчитывать время необходимое для завершения задачи.
+                        </p>
+                    </div>
+                </div>
                 <h3 class="text-block">Как проявляется</h3>
-                <p>
-                    Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами
-                    пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.
-                </p>
-                <p>
-                    Это отлично выражается в старом афоризме: <br />Первые 90% готового кода отнимают первые 90% времени
-                    разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.
-                </p>
+                <div class="container">
+                    <div class="box">
+                        <p>
+                            Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами
+                            пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p>
+                            Это отлично выражается в старом афоризме: <br />Первые 90% готового кода отнимают первые 90% времени
+                            разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
