Errors in HTML fixed – HTML was not valid

--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,7 @@
             <div class="inner">
                 <h2>Что же это такое, <br /><span class="emphasis">когнитивные искажения?</span></h2>
                 <p>Что такое когнитивные искажения. Petrovna Channel</p>
-                <iframe width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" frameborder="0"
-                    allowfullscreen></iframe>
+                <iframe width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
             </div>
         </section>
 
@@ -261,8 +260,8 @@
                 </div>
                 <div class="box">
                     <form action="#" method="post">
-                        <label for="mail">Электронная почта</label>
-                        <input type="mail" name="mail" id="mail" placeholder="Ваша электронная почта">
+                        <label for="email">Электронная почта</label>
+                        <input type="email" name="email" id="email" placeholder="Ваша электронная почта">
                         <button name="button-email">
                             <img src="assets/img/send.png" alt="отправить ваш E-Mail адрес">
                         </button>
@@ -275,8 +274,8 @@
                 <p>По материалам статьи <a href="#">Yash Ranadive Cognitive Biases in Programming</a></p>
                 <p><a href="#">Курсы программирования Hexlet</a></p>
             </div>
+        </div>
     </footer>
-    </div>
 </body>
 
 </html>
