fixed various small layout bugs

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                             продуктивности, багам и бесконечному разочарованию.</p>
                         <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем
                             сломать и цикл, а остатки нейтрализовать.</p>
-                        <a href="#" class="more">ПОДРОБНЕЕ</a>
+                        <a href="#navigation" class="more">ПОДРОБНЕЕ</a>
                     </div>
                 </div>
                 <img src="assets/img/main.png" alt="Tota">
