--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <main>
-        <header class="theme-color-default story">
+        <header class="page-header theme-color-default">
             <div class="inner">
-                <h1><span class="emphasis">Когнитивные <br />искажения<br /></span>в программировании</h1>
+                <h1 class="workaround"><span class="emphasis">Когнитивные <br />искажения<br /></span>в программировании</h1>
                 <div class="container">
                     <div class="box">
                         <p>
@@ -33,52 +33,52 @@
                         <a href="#navigation" class="more">ПОДРОБНЕЕ</a>
                     </div>
                 </div>
-                <img src="assets/img/main.png" alt="Tota">
+                <img src="assets/img/main.png" alt="" />
             </div>
         </header>
 
-        <section class="theme-color-white video">
+        <section class="video theme-color-white">
             <div class="inner">
-                <h2>Что же это такое, <br /><span class="emphasis">когнитивные искажения?</span></h2>
+                <h2 class="workaround">Что же это такое, <br /><span class="emphasis">когнитивные искажения?</span></h2>
                 <p>Что такое когнитивные искажения. Petrovna Channel</p>
                 <iframe width="919" height="569" src="https://www.youtube.com/embed/jie9AizBqss" allowfullscreen></iframe>
             </div>
         </section>
 
-        <nav class="theme-color-dark" id="navigation">
+        <nav class="page-nav theme-color-dark" id="navigation">
             <div class="inner">
                 <div>
                     <h2><span class="emphasis">5 когнитивных искажений, </span><br />о существовании которых стоит помнить</h2>
                 </div>
 
                 <a href="#ikea-effect" class="nav-box">
-                    <span class="number">1</span>
+                    <span class="number workaround">1</span>
                     <h3>Эффект ИКЕА</h3>
                     <p>Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
                 </a>
 
                 <a href="#premature-optimization" class="nav-box">
-                    <span class="number">2</span>
+                    <span class="number workaround">2</span>
                     <h3>Преждевременная оптимизация</h3>
                     <p>Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
                 </a>
 
                 <a href="#distortion-of-novelty" class="nav-box">
-                    <span class="number">3</span>
+                    <span class="number workaround">3</span>
                     <h3>Искажение новизны</h3>
                     <p>Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более
                         старые.</p>
                 </a>
 
                 <a href="#hyperbolic-depreciation" class="nav-box">
-                    <span class="number">4</span>
+                    <span class="number workaround">4</span>
                     <h3>Гиперболическое обесценивание</h3>
                     <p>Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но
                         доступную в будущем.</p>
                 </a>
 
                 <a href="#errors-in-planning" class="nav-box">
-                    <span class="number">5</span>
+                    <span class="number workaround">5</span>
                     <h3>Ошибка планирования</h3>
                     <p>Неправильно рассчитывать время необходимое для завершения задачи.</p>
                 </a>
@@ -90,7 +90,7 @@
             <div class="inner">
                 <div class="container">
                     <div class="box">
-                        <img src="assets/img/ikea-effect.jpg" alt="Эффект ИКЕА" />
+                        <img src="assets/img/ikea-effect.jpg" alt="Эффект ИКЕА" class="deco" />
                     </div>
                     <div class="box">
                         <p class="lead">Когнитивные искажения</p>
@@ -100,7 +100,7 @@
                         </p>
                     </div>
                 </div>
-                <h3 class="text-block">Как проявляется</h3>
+                <h3 class="deco">Как проявляется</h3>
                 <div class="container">
                     <div class="box">
                         <p>
@@ -130,10 +130,10 @@
                         </p>
                     </div>
                     <div class="box">
-                        <img src="assets/img/premature-optimization.jpg" alt="Преждевременная оптимизация" />
+                        <img src="assets/img/premature-optimization.jpg" alt="Преждевременная оптимизация" class="deco" />
                     </div>
                 </div>
-                <h3 class="text-block">Как проявляется</h3>
+                <h3 class="deco">Как проявляется</h3>
                 <div class="container">
                     <div class="box">
                         <p>
@@ -155,7 +155,7 @@
             <div class="inner">
                 <div class="container">
                     <div class="box">
-                        <img src="assets/img/distortion-of-novelty.jpg" alt="Искажение новизны" />
+                        <img src="assets/img/distortion-of-novelty.jpg" alt="Искажение новизны" class="deco" />
                     </div>
                     <div class="box">
                         <p class="lead">Когнитивные искажения</p>
@@ -166,7 +166,7 @@
                         </p>
                     </div>
                 </div>
-                <h3 class="text-block">Как проявляется</h3>
+                <h3 class="deco">Как проявляется</h3>
                 <div class="container">
                     <div class="box">
                         <p>
@@ -196,10 +196,10 @@
                         </p>
                     </div>
                     <div class="box">
-                        <img src="assets/img/hyperbolic-depreciation.jpg" alt="Гиперболическое обесценивание" />
+                        <img src="assets/img/hyperbolic-depreciation.jpg" alt="Гиперболическое обесценивание" class="deco" />
                     </div>
                 </div>
-                <h3 class="text-block">Как проявляется</h3>
+                <h3 class="deco">Как проявляется</h3>
                 <div class="container">
                     <div class="box">
                         <p>
@@ -223,7 +223,7 @@
             <div class="inner">
                 <div class="container">
                     <div class="box">
-                        <img src="assets/img/planning-error.jpg" alt="Ошибка планирования" />
+                        <img src="assets/img/planning-error.jpg" alt="Ошибка планирования" class="deco" />
                     </div>
                     <div class="box">
                         <p class="lead">Когнитивные искажения</p>
@@ -233,7 +233,7 @@
                         </p>
                     </div>
                 </div>
-                <h3 class="text-block">Как проявляется</h3>
+                <h3 class="deco">Как проявляется</h3>
                 <div class="container">
                     <div class="box">
                         <p>
@@ -243,7 +243,9 @@
                     </div>
                     <div class="box">
                         <p>
-                            Это отлично выражается в старом афоризме: <br />Первые 90% готового кода отнимают первые 90% времени
+                            Это отлично выражается в старом афоризме: 
+                        </p>
+                        <p>Первые 90% готового кода отнимают первые 90% времени
                             разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.
                         </p>
                     </div>
@@ -252,9 +254,9 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="page-footer">
         <div class="inner">
-            <div class="container">
+            <div class="container theme-color-ultra-dark">
                 <div class="box">
                     <h3>Хотите узнать больше? <br />Подпишитесь на обновления</h3>
                 </div>
